# pc-ble-driver-js

./: .babelrc  .eslintrc.json  .gitignore  .gitmodules  .jscsrc  .jsdoc.json  .jshintrc  .npmrc  .travis.yml  Adapter.html  AdapterFactory.html  AdapterState.html  CMakeLists.txt  Characteristic.html  Descriptor.html  Device.html  Dfu.html  Error.html  FirmwareRegistry.html  FirmwareUpdater.html  Installation.md  LICENSE  README.md  Security.html  Service.html  ServiceFactory.html  adapter.js.html  adapterFactory.js.html  adapterState.js.html  azure-node.yml  azure-pipelines.yml  build.js  characteristic.js.html  descriptor.js.html  device.js.html  dfu.js.html  do_prebuild.js  ecctest.js  example_advertisement.js  example_scan.js  (+15 more)
api/: adapter.js  adapterFactory.js  adapterState.js  characteristic.js  descriptor.js  device.js  dfu.js  dfuTransport.js  firmware.js  firmwareRegistry.js  firmwareUpdater.js  firmwareUtil.js  security.js  service.js  serviceFactory.js
api/__tests__/: dfu-test.js  dfuTransport-test.js  firmware-test.js  firmwareRegistry-test.js  firmwareUpdater-test.js
api/dfu/: bleTransport.js  controlPointService.js  deviceInfoService.js  dfuConstants.js  dfuModels.js  dfuNotificationQueue.js  dfuNotificationStore.js  dfuObjectWriter.js  dfuPacketWriter.js  dfuSpeedometer.js  dfuTransport.js  dfuTransportFactory.js
api/util/: adType.js  addressConv.js  arrayUtil.js  crc.js  hexConv.js  intArrayConv.js  logLevel.js  sdConv.js  toText.js
cmake/: apple.cmake  gcc.cmake  msvc.cmake
config/: jest-system.config  jest-system.json  jest-unit.config  jest-unit.json
docs/: Adapter.html  AdapterFactory.html  AdapterState.html  Characteristic.html  Descriptor.html  Device.html  Dfu.html  Error.html  FirmwareUpdater.html  Security.html  Service.html  ServiceFactory.html  adapter.js.html  adapterFactory.js.html  adapterState.js.html  characteristic.js.html  descriptor.js.html  device.js.html  dfu.js.html  firmware.js.html  firmwareUpdater.js.html  global.html  index.html  security.js.html  service.js.html  serviceFactory.js.html
driver/: CMakeLists.txt  libs130_nrf51_ble_driver.dylib  s130_nrf51_ble_driver.lib
driver/hex/: SD20.patch  connectivity_115k2_sdk-10.0.0_s130-1.0.0.hex  connectivity_115k2_with_s130_1.0.0.hex  connectivity_115k2_with_s130_2.0.0.hex  connectivity_115k2_with_s130_2.0.1.hex  connectivity_115k2_with_s132_2.0.0.hex  connectivity_115k2_with_s132_2.0.1.hex
driver/include/: ble.h  ble_gap.h  ble_gatt.h  ble_gattc.h  ble_gatts.h  ble_l2cap.h  ble_types.h  nrf_svc.h  sd_rpc.h  sd_rpc_types.h
driver/include/config/: platform.h
driver/include/internal/: adapter_internal.h  ble_common.h
driver/include/internal/sdk/codec/: ble_gap_app.h  ble_gap_struct_serialization.h  ble_gatts_struct_serialization.h  ble_struct_serialization.h
driver/include/internal/sdk/misc/: app_ble_gap_sec_keys.h  app_util.h  compiler_abstraction.h  conn_ble_user_mem.h  ser_config.h
driver/include/internal/transport/: h5.h  h5_transport.h  serialization_transport.h  transport.h  uart_boost.h
driver/lib/: libs130_nrf51_ble_driver.dylib  s130_nrf51_ble_driver.lib
driver/src/: adapter_internal.cpp  app_ble_gap_sec_keys.cpp  ble_common.cpp  ble_gap_impl.cpp  ble_gattc_impl.cpp  ble_gatts_impl.cpp  ble_impl.cpp  sd_rpc_impl.cpp
driver/src/sdk/codec/: ble_event.c  ble_gap_evt_auth_status.c  ble_gap_evt_passkey_display.c  ble_gap_sec_params_reply.c  ble_gap_struct_serialization.c  ble_gattc_evt_hvx.c  ble_gattc_evt_read_rsp.c  ble_gattc_evt_write_rsp.c  ble_gatts_struct_serialization.c  ble_struct_serialization.c  power_system_off.c  temp_get.c
driver/src/sdk/misc/: app_ble_gap_sec_keys.cpp
driver/src/transport/: h5.cpp  h5_transport.cpp  serialization_transport.cpp  slip.cpp  transport.cpp  uart_boost.cpp  uart_settings.cpp  uart_settings_boost.cpp
driver/test/: test_uart.cpp
driver_include/: nrf_svc.h  sd_rpc.h
examples/: adapterPool.js  dfu.js  example_advertisement.js  example_scan.js  heart_rate_collector.js  heart_rate_monitor.js
examples/dfu/: secure_dfu_secure_dfu_ble_s130_pca10028_debug.hex  secure_dfu_secure_dfu_ble_s132_pca10040_debug.hex
local_typings/: index.d.ts
profiling/pc_heartrate_application/: heart_rate_collector.sln  heart_rate_collector.vcxproj  test_hvx.c
profiling/pc_heartrate_monitor_application/: heart_rate_monitor.sln  heart_rate_monitor.vcxproj  main.c
scripts/: pre-gyp-fetch-draft.js  publish-all-prebuilt.js  system-tests.sh
src/: adapter.cpp  adapter.h  adapter_linux.cpp  adapter_osx.cpp  adapter_unix.cpp  adapter_win.cpp  circular_fifo.h  circular_fifo_unsafe.h  common.cpp  common.h  driver.cpp  driver.h  driver_gap.cpp  driver_gap.h  driver_gatt.cpp  driver_gatt.h  driver_gattc.cpp  driver_gattc.h  driver_gatts.cpp  driver_gatts.h  driver_uecc.cpp  driver_uecc.h  serialadapter.cpp  serialadapter.h  serialadapter_linux.cpp  serialadapter_osx.cpp  serialadapter_win.cpp  win_delay_load_hook.cpp
src/uECC/: uECC.c
src/win/: enumser.cpp  jlinkIdRegLookup.cpp
test/: README.md  adapterTest.js  advertise.test.js  advertiseTest.js  common.js  connection.test.js  connectionTest.js  dfu-test.js  dfu.js  ecctest.js  getAddress.js  mocha.opts  mtu.test.js  mtuTest.js  openClose.test.js  openCloseTest.js  serverClient.test.js  setup.js  simpleScan.test.js  simpleScanTest.js  simpleSecurity.js  simpleSecurity.test.js  tooManyVsCharacteristicUuids.test.js  tooManyVsServiceUuids.test.js
test/api/: adapterFactoryTest.js  adapterGenericTest.js  adapterPeripheralAdvertisingTest.js  adapterServerDiscoveryTest.js  adapterSetServicesTest.js  adapterTest.js  commonStubs.js  eventTests.js  events.js  scanTest.js
test/api-driver/: adapterTest.js  scanTest.js  setup.js  simpleSecurity.js
test/apiIntegrationTests/: log.txt  testAddService.js  testAdvertisement.js  testCharacteristicNotifications.js  testConnectionUpdate.js  testGattcLongReadWrite.js  testLibrary.js  testPairing.js  testReadWrite.js  testReadWriteDescriptors.js  testRunner.js  testScan.js  testSendingNotificationsAndIndications.js  (+2 more)
typings/: index.d.ts
(+68 files in other folders)
